0.5.2
-----
Improved the behaviour upon loss of connction. Now it
always goes into WFConnection state instead of Unconnected.

Added a command to drbdsetup to force a run of the basic syncer.

0.5.1
-----
Fixed the lockup upon loss of connection on SMP machines.
Added a kludge to make use with heartbeat possible.
Added scripts for use with heartbeat.

0.5
---
The code was considerably changed and enlarged.

There are now three wire protocols.
A) A write operation is complete as soon as the data is
   written to disk and sent to the network.
B) A write operation is complete as soon as a reception 
   acknowledgement arrived.
c) A write operation is complete as soon as a write
   acknowledgement arrived.

The basic syncer was replaced by a bitmap-based syncer. The new
one only updates the blocks which were modified during the
absence of the newly joined node.

A huge load of bug fixes.

Finally I cleaned up the drbdsetup utility. Now all the
features are accessible with command line options.

0.4
---
There is a basic syncer now. It will bring a newly joined
secondary node up to date by copying each block.
It is working at 250KB/second (hard coded in drbdsetup for now).

IO errors on the local disk are now reported as if there
was an io error on drbd.


0.3
---
There is a new timeout. If the primary node cannot send (TCP!)
within the timeout, it falls back into unconnected operation.

You can also disable the timeout (by setting it to zero), but in
case of a failure of the secondary node, your primary node will block!

Currently the timeout is hard coded into drbdsetup (3 Seconds).


0.2
---
This time I worked a lot looking into all possible deadlocks...
I think if you do not use any loop-back device it should
work without deadlocking. It is not working on top of the loop
block device and it is not working via the loop-back network!

This time it should handle all block size issues, and thus
reiserfs is feeling happy on top of drbd.


Status of drbd-0.1.tar.gz